--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 } from "https://public.tableau.com/javascripts/api/tableau.embedding.3.3.0.min.js";
 
                 const viz = new TableauViz();
-                viz.src = 'https://tableaudev.mcd.com/#/views/MCD_SCHM_TIMESERIES_W_Feedback/Timeserieshomepage';
+                viz.src = https://tableaudev.mcd.com/#/views/MCD_SCHM_TIMESERIES_v2/Timeserieshomepage;
                 viz.addEventListener(
                     TableauEventType.FirstInteractive,
                     handleFirstInteractive
